Update to version 1

--- a/config/translations/en.json
+++ b/config/translations/en.json
@@ -9,5 +9,7 @@
   "prev": "Previous",
   "of": "of",
   "pageNotFound": "Page not found",
-  "returnHome": "return home"
+  "returnHome": "return home",
+  "siteTitle": "Burhan Savcı Blog",
+  "siteDescription": "My personal blog site"
 }
