--- a/config/translations/tr.json
+++ b/config/translations/tr.json
@@ -9,5 +9,7 @@
   "prev": "Önceki",
   "of": "/",
   "pageNotFound": "Sayfa bulunamadı",
-  "returnHome": "ana sayfaya dön"
+  "returnHome": "ana sayfaya dön",
+  "siteTitle": "Burhan Savcı Blog",
+  "siteDescription": "Kişisel blog sitem"
 }
